# DejaVu

./: CLAUDE.md  Cargo.toml  README.md
src/: main.rs
src/cli/: args.rs
src/dedup/: hash_group.rs  mod.rs
src/error/: mod.rs
src/file_ops/: deleter.rs  mod.rs  opener.rs
src/hashing/: exact_hash.rs  mod.rs  perceptual_hash.rs
src/models/: duplicate_group.rs  file_info.rs  mod.rs
src/scanner/: file_collector.rs  media_filter.rs  mod.rs
src/tui/: app.rs  mod.rs
src/tui/event/: key_handler.rs  mod.rs
src/tui/ui/: file_list.rs  help.rs  main_layout.rs  mod.rs  preview.rs
src/utils/: format.rs  mod.rs
